refactor: add http request middleware and refactor aws credential routes
