# docs/swagger.yaml
@@ -11,19 +11,19 @@ definitions:
     type: object
   dtos.AWSCredentialsResponse:
     properties:
-      access_key_id:
+      accessKeyId:
         type: string
-      created_at:
+      createdAt:
         type: string
-      deleted_at:
+      deletedAt:
         type: string
       id:
         type: string
       name:
         type: string
-      secret_access_key:
+      secretAccessKey:
         type: string
-      updated_at:
+      updatedAt:
         type: string
     type: object
   dtos.AlertManagerConfig:
@@ -42,16 +42,16 @@ definitions:
     type: object
   dtos.CreateAWSCredentialsRequest:
     properties:
-      access_key_id:
+      accessKeyId:
         type: string
       name:
         type: string
-      secret_access_key:
+      secretAccessKey:
         type: string
     required:
-    - access_key_id
+    - accessKeyId
     - name
-    - secret_access_key
+    - secretAccessKey
     type: object
   dtos.DeployThanosRequest:
     properties:
@@ -208,11 +208,11 @@ definitions:
     type: object
   dtos.UpdateAWSCredentialsRequest:
     properties:
-      access_key_id:
+      accessKeyId:
         type: string
       name:
         type: string
-      secret_access_key:
+      secretAccessKey:
         type: string
     type: object
   dtos.UpdateNetworkRequest:
